--- a/index.html
+++ b/index.html
@@ -19,11 +19,22 @@
         <input type="text" id="todo-input" placeholder="Add your task" />
         <button type="submit">Add</button>
       </form>
+
+      <!-- counter starts here-->
+      <div class="counter-container">
+        <div id="task-counters">
+          The total number of to-do: <span id="total-counter">0</span>
+        </div>
+      </div>
+      <!-- counter end here-->
+
       <ul id="todo-list">
         <!-- Tasks will be added here -->
+
         <!-- <li>Attend a zoom meeting </li>
         <li>Hit the gym</li>
-        <li>Read a book</li>   -->
+        <li>Read a book</li> -->
+        
       </ul>
     </div>
     <script src="index.js"></script>
